@@ -7,6 +7,11 @@ What's New in Python 3.1.4?
 
 *Release date: 2011-05-XX*
 
+Library
+-------
+
+- Issue #12009: Fixed regression in netrc file comment handling.
+
 Extension Modules
 -----------------
 
